# life-kline-engine

./: .gitignore  CLAUDE.md  PRD.md  README.md  book.md  huang_jinrong_case.md  pyproject.toml  run_server.bat  setup.py  switch_model.py  temp_raw_response.txt
.claude/: agent-models.json
.playwright-mcp/: page-2026-07-17T04-38-32-366Z.yml  page-2026-07-17T05-48-51-474Z.yml  page-2026-07-17T05-48-59-396Z.yml  page-2026-07-17T05-49-10-677Z.yml  page-2026-07-17T05-49-29-745Z.yml  page-2026-07-17T05-49-41-931Z.yml  page-2026-07-17T05-49-54-617Z.yml  page-2026-07-17T05-54-22-865Z.yml  page-2026-07-17T05-54-25-269Z.yml  page-2026-07-17T05-54-46-681Z.yml  page-2026-07-17T06-26-54-210Z.yml  page-2026-07-17T06-26-57-394Z.yml  page-2026-07-17T06-27-09-307Z.yml  page-2026-07-18T11-14-15-604Z.yml  page-2026-07-18T11-23-13-524Z.yml  page-2026-07-18T11-37-21-819Z.yml  page-2026-07-18T11-41-46-646Z.yml  page-2026-07-18T11-41-52-003Z.yml  page-2026-07-18T11-43-07-007Z.yml  page-2026-07-18T11-49-33-447Z.yml  page-2026-07-18T11-54-27-127Z.yml  page-2026-07-18T11-54-31-879Z.yml  page-2026-07-18T12-05-31-086Z.yml  page-2026-07-18T13-01-41-791Z.yml  page-2026-07-18T13-01-58-304Z.yml  page-2026-07-18T13-44-15-911Z.yml  page-2026-07-18T13-44-23-463Z.yml  page-2026-07-18T13-45-47-139Z.yml  page-2026-07-18T13-47-02-504Z.yml  page-2026-07-20T07-08-37-941Z.yml  page-2026-07-20T07-08-52-932Z.yml  page-2026-07-20T07-10-17-755Z.yml  page-2026-07-20T07-45-59-603Z.yml  page-2026-07-20T07-46-27-248Z.yml  page-2026-07-20T07-46-41-008Z.yml  page-2026-07-20T07-46-44-627Z.yml  page-2026-07-20T07-46-57-830Z.yml  page-2026-07-20T07-47-18-831Z.yml  page-2026-07-20T07-48-03-354Z.yml  page-2026-07-20T07-54-04-425Z.yml  (+39 more)
admin-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  admin.py  dao.py  database.py  demo.html  main.py  requirements.txt
docs/: ENGINEERING_STANDARD.md  _jinlanlan_extracted.txt  (+4 more)
(+345 files in other folders)
